f: Implement project dependency checker

--- a/Assets/AirConsole/scripts/Tests/AirConsole.Tests.asmdef
+++ b/Assets/AirConsole/scripts/Tests/AirConsole.Tests.asmdef
@@ -1,10 +1,11 @@
 {
-    "name": "Tests",
+    "name": "AirConsole.Tests",
     "rootNamespace": "NDream.AirConsole.Test",
     "references": [
         "UnityEngine.TestRunner",
         "UnityEditor.TestRunner",
-        "AirConsole.Runtime"
+        "AirConsole.Runtime",
+        "AirConsole.Editor"
     ],
     "includePlatforms": [
         "Editor"
