--- a/Assets/AirConsole/scripts/editor/AirConsole.Editor.asmdef
+++ b/Assets/AirConsole/scripts/editor/AirConsole.Editor.asmdef
@@ -11,7 +11,9 @@
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": true,
-    "precompiledReferences": [],
+    "precompiledReferences": [
+        "Newtonsoft.Json.dll"
+    ],
     "autoReferenced": true,
     "defineConstraints": [],
     "versionDefines": [],
