e: Update unitypackage for 2.5.2 plugin version
r: Make queries block optional to not break old unity versions

--- a/Assets/Plugins/Android/AndroidManifest.xml
+++ b/Assets/Plugins/Android/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.unity3d.player" xmlns:tools="http://schemas.android.com/tools" android:installLocation="preferExternal">
   <supports-screens android:smallScreens="true" android:normalScreens="true" android:largeScreens="true" android:xlargeScreens="true" android:anyDensity="true" />
-  <queries>
+  <queries tools:node="remove">
     <intent>
       <action android:name="android.intent.action.MAIN" />
       <data android:mimeType="application/airconsole" />
