--- a/.github/workflows/create-release.yaml
+++ b/.github/workflows/create-release.yaml
@@ -71,9 +71,21 @@ jobs:
           Library-AUP-
           Library-
 
+    - name: Clear Unity Package Cache
+      run: |
+        rm -rf ~/.cache/unity3d/packages
+
+    - name: Cache Packages
+      uses: actions/cache@v4
+      with:
+        path: ~/.cache/unity3d/packages
+        key: Packages-${{ hashFiles('Packages/packages-lock.json') }}-${{ matrix.platform }}-${{ matrix.unityVersion }}
+        restore-keys: |
+          Packages-
+
     - name: Cleanup Docker
-    run: |
-      docker system prune -af --volumes
+      run: |
+        docker system prune -af --volumes
 
     # - name: Test ${{ matrix.platform }} in ${{ matrix.unityVersion }}
     #   uses: game-ci/unity-test-runner@v4
