--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,13 +1,15 @@
 {
   "dependencies": {
-    "com.airconsole.webview": "https://github.com/AirConsole/airconsole-unity-webview.git?path=/package#v1.0.1",
+    "com.airconsole.unity-webview": "https://github.com/airconsole/airconsole-unity-webview.git?path=/dist/package-nofragment#v1.1.0",
+    "com.unity.ai.navigation": "2.0.5",
     "com.unity.ext.nunit": "2.0.5",
-    "com.unity.ide.rider": "3.0.28",
-    "com.unity.ide.vscode": "1.2.5",
-    "com.unity.mobile.android-logcat": "1.3.2",
-    "com.unity.test-framework": "1.4.4",
-    "com.unity.textmeshpro": "2.1.6",
-    "com.unity.ugui": "1.0.0",
+    "com.unity.ide.rider": "3.0.34",
+    "com.unity.ide.visualstudio": "2.0.22",
+    "com.unity.mobile.android-logcat": "1.4.3",
+    "com.unity.multiplayer.center": "1.0.0",
+    "com.unity.test-framework": "1.4.5",
+    "com.unity.ugui": "2.0.0",
+    "com.unity.modules.accessibility": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
