F**: Implement car information querying

--- a/Assets/Plugins/Android/gradleTemplate.properties
+++ b/Assets/Plugins/Android/gradleTemplate.properties
@@ -2,6 +2,7 @@
 android.useAndroidX=true
 #android.enableJetifier=true
 #android.nonTransitiveRClass=true
+#android.enableLint=false
 
 # Unity provided
 org.gradle.jvmargs=-Xmx**JVM_HEAP_SIZE**M
