--- a/Assets/Plugins/Android/AndroidManifest.xml
+++ b/Assets/Plugins/Android/AndroidManifest.xml
@@ -7,7 +7,13 @@
       <data android:mimeType="application/airconsole" />
     </intent>
   </queries>
-  <application android:theme="@style/UnityThemeSelector" android:usesCleartextTraffic="true" android:icon="@drawable/app_icon" android:label="@string/app_name" android:isGame="true" android:banner="@drawable/app_banner">
+  <application android:theme="@style/UnityThemeSelector"
+               tools:replace="android:theme,android:icon" 
+               android:usesCleartextTraffic="true" 
+               android:icon="@drawable/app_icon"
+               android:label="@string/app_name" 
+               android:isGame="true" 
+               android:banner="@drawable/app_banner">
     <activity android:name="com.unity3d.player.UnityPlayerActivity" 
               android:label="@string/app_name"
               android:screenOrientation="fullSensor" 
