--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
-    "com.airconsole.unity-webview": "https://github.com/airconsole/airconsole-unity-webview.git?path=/dist/package-nofragment#v1.1.3",
+    "com.airconsole.unity-webview": "https://github.com/airconsole/airconsole-unity-webview.git?path=/dist/package-nofragment#v1.1.5",
+    "com.unity.ai.navigation": "1.1.5",
     "com.unity.ext.nunit": "2.0.5",
     "com.unity.ide.rider": "3.0.34",
     "com.unity.ide.vscode": "1.2.5",
