--- a/Assets/Plugins/Android/AndroidManifest.xml
+++ b/Assets/Plugins/Android/AndroidManifest.xml
@@ -7,20 +7,8 @@
       <data android:mimeType="application/airconsole" />
     </intent>
   </queries>
-  <application android:theme="@style/UnityThemeSelector"
-               tools:replace="android:theme,android:icon" 
-               android:usesCleartextTraffic="true" 
-               android:icon="@drawable/app_icon"
-               android:label="@string/app_name" 
-               android:isGame="true" 
-               android:banner="@drawable/app_banner">
-    <activity android:name="com.unity3d.player.UnityPlayerActivity" 
-              android:label="@string/app_name"
-              android:screenOrientation="fullSensor" 
-              android:launchMode="singleTask" 
-              android:configChanges="mcc|mnc|locale|touchscreen|keyboard|keyboardHidden|navigation|orientation|screenLayout|uiMode|screenSize|smallestScreenSize|fontScale|layoutDirection|density"
-              android:hardwareAccelerated="true"
-              android:theme="@style/UnityThemeSelector">
+  <application android:theme="@style/UnityThemeSelector" tools:replace="android:theme,android:icon" android:usesCleartextTraffic="true" android:icon="@drawable/app_icon" android:label="@string/app_name" android:isGame="true" android:banner="@drawable/app_banner">
+    <activity android:name="com.unity3d.player.UnityPlayerActivity" android:label="@string/app_name" android:screenOrientation="fullSensor" android:launchMode="singleTask" android:configChanges="mcc|mnc|locale|touchscreen|keyboard|keyboardHidden|navigation|orientation|screenLayout|uiMode|screenSize|smallestScreenSize|fontScale|layoutDirection|density" android:hardwareAccelerated="true" android:theme="@style/UnityThemeSelector">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
         <category android:name="android.intent.category.LAUNCHER" />
