--- a/Assets/AirConsole/scripts/Runtime/AirConsole.Runtime.asmdef
+++ b/Assets/AirConsole/scripts/Runtime/AirConsole.Runtime.asmdef
@@ -19,7 +19,9 @@
         "websocket-sharp.dll"
     ],
     "autoReferenced": true,
-    "defineConstraints": [],
+    "defineConstraints": [
+        "UNITY_2022_3_OR_NEWER"
+    ],
     "versionDefines": [],
     "noEngineReferences": false
 }
