--- a/Assets/AirConsole/scripts/Tests/Editor/AirConsole.Editor.Tests.asmdef
+++ b/Assets/AirConsole/scripts/Tests/Editor/AirConsole.Editor.Tests.asmdef
@@ -18,7 +18,9 @@
         "Newtonsoft.Json.dll"
     ],
     "autoReferenced": false,
-    "defineConstraints": [],
+    "defineConstraints": [
+        "UNITY_2022_3_OR_NEWER"
+    ],
     "versionDefines": [],
     "noEngineReferences": false
 }
