Improve implementation and prepare RC1

--- a/Assets/AirConsole/scripts/Runtime/AirConsole.Runtime.asmdef
+++ b/Assets/AirConsole/scripts/Runtime/AirConsole.Runtime.asmdef
@@ -4,7 +4,7 @@
     "references": [
         "Unity.TextMeshPro",
         "UnityEngine.UI",
-        "com.airconsole.unity-webview.runtime"
+        "unity-webview"
     ],
     "includePlatforms": [
         "Android",
