--- a/Assets/AirConsole/scripts/Tests/EditMode/AirConsole.EditMode.Tests.asmdef
+++ b/Assets/AirConsole/scripts/Tests/EditMode/AirConsole.EditMode.Tests.asmdef
@@ -1,24 +1,27 @@
 {
-  "name": "AirConsole.EditMode.Tests",
-  "rootNamespace": "NDream.AirConsole.EditMode.Tests",
-  "references": [
-    "UnityEngine.TestRunner",
-    "AirConsole.Runtime"
-  ],
-  "includePlatforms": [
-    "Editor"
-  ],
-  "excludePlatforms": [],
-  "allowUnsafeCode": false,
-  "overrideReferences": true,
-  "precompiledReferences": [
-    "nunit.framework.dll",
-    "Newtonsoft.Json.dll"
-  ],
-  "autoReferenced": false,
-  "defineConstraints": [
-        "UNITY_2022_3_OR_NEWER"
+    "name": "AirConsole.EditMode.Tests",
+    "rootNamespace": "NDream.AirConsole.EditMode.Tests",
+    "references": [
+        "UnityEngine.TestRunner",
+        "AirConsole.Runtime"
     ],
-  "versionDefines": [],
-  "noEngineReferences": false
+    "includePlatforms": [
+        "Android",
+        "Editor",
+        "WebGL"
+    ],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": true,
+    "precompiledReferences": [
+        "nunit.framework.dll",
+        "Newtonsoft.Json.dll"
+    ],
+    "autoReferenced": true,
+    "defineConstraints": [
+        "UNITY_2022_3_OR_NEWER",
+        "UNITY_INCLUDE_TESTS"
+    ],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
