--- a/Assets/AirConsole/scripts/Tests/Editor/AirConsole.Editor.Tests.asmdef
+++ b/Assets/AirConsole/scripts/Tests/Editor/AirConsole.Editor.Tests.asmdef
@@ -19,7 +19,8 @@
     ],
     "autoReferenced": false,
     "defineConstraints": [
-        "UNITY_2022_3_OR_NEWER"
+        "UNITY_2022_3_OR_NEWER",
+        "UNITY_INCLUDE_TESTS"
     ],
     "versionDefines": [],
     "noEngineReferences": false
