--- a/Assets/AirConsole/scripts/Tests/PlayMode/AirConsole.PlayMode.Tests.asmdef
+++ b/Assets/AirConsole/scripts/Tests/PlayMode/AirConsole.PlayMode.Tests.asmdef
@@ -15,7 +15,8 @@
     ],
     "autoReferenced": false,
     "defineConstraints": [
-        "UNITY_2022_3_OR_NEWER"
+        "UNITY_2022_3_OR_NEWER",
+        "UNITY_INCLUDE_TESTS"
     ],
     "versionDefines": [],
     "noEngineReferences": false
