--- a/Assets/AirConsole/package.json
+++ b/Assets/AirConsole/package.json
@@ -16,7 +16,7 @@
   ],
   "author": {
     "name": "AirConsole",
-    "email": "hello@n-dream.com",
+    "email": "hello@airconsole.com",
     "url": "https://corp.airconsole.com"
   }
 }
